<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gps Track</string>
    <string name="label_settings">Settings</string>
    <string name="label_statistics">Statistics</string>
    <!-- used in main page -->
    <string name="notice">gps is off</string>
    <string name="dialog_message">Turn on the gps</string>
    <string name="ok">OK</string>
    <string name="latitude">Latitude:</string>
    <string name="session_no">Session NO:</string>
    <string name="longitude">Longitude:</string>
    <string name="fix_no">Fix NO:</string>
    <string name="ttff">TTFF:</string>
    <string name="altitude">Altitude:</string>
    <string name="speed">Speed:</string>
    <string name="time">Time:</string>
    <string name="sv_used">Sv used:</string>
    <string name="status">Status:</string>
    <string name="statistics">Statistics</string>
    <string name="sv_info">SV info</string>
    <string name="prn">PRN</string>
    <string name="snr">SNR</string>
    <string name="elev">Elev</string>
    <string name="azim">Azim</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="clear_data">Clear Aiding Data</string>
    <string name="settings">Settings</string>
    <string name="supl_config">SUPL config</string>
    <string name="config_gps">please config the gps</string>
    <string name="start_test">start the test</string>
    <string name="stop_test">stop the test</string>
    <string name="generate_report">generating the test report,please wait...</string>
    <string name="generate_report_complete">the test report has been saved in %s</string>
    <string name="send_command_error">Send command error,the test was stopped!</string>
    <string name="clear_aiding_data_success">the aiding data was cleared successfully</string>
    <string name="clear_aiding_data_failed">clear aiding data failed</string>
    <string name="status_success">success</string>
    <string name="status_failed">failed</string>

    <!-- used in config page -->
    <string name="sessions">NO. of sessions:</string>
    <string name="time_between_sessions">Time between sessions:</string>
    <string name="time_out">Time out for first fix:</string>
    <string name="ref_position">Ref position:</string>
    <string name="ref_long">Ref Long:</string>
    <string name="ref_lat">Ref Lat:</string>
    <string name="mode">Mode:</string>
    <string-array name="mode_entry">
        <item>MSB</item>
        <item>MSA</item>
        <item>Standalone</item>
        <item>Tracking</item>
    </string-array>
    <string name="start_mode">Statr Mode:</string>
    <string name="cold">Cold</string>
    <string name="warm">Warm</string>
    <string name="hot">Hot</string>
    <string name="cfg_time">Time</string>
    <string name="cfg_position">Position</string>
    <string name="others">Others:</string>
    <string name="cfg_eph">Ephemeris</string>
    <string name="cfg_alm">Almanac</string>
    <string name="storage_path">Storage Path:</string>
    <string name="internal">Internal</string>
    <string name="external">External</string>
    <string name="nmea">NMEA</string>
    <string name="nmea_on">ON</string>
    <string name="nmea_off">OFF</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <!-- used in statistics page -->
    <string name="ttff_68">"TTFF-68%:"</string>
    <string name="ttff_95">"TTFF-95%:"</string>
    <string name="accu_68">"Accu-68%:"</string>
    <string name="accu_95">"Accu-95%:"</string>
    <string name="no_of_sessions">NO of sessions</string>
    <string name="statistics_ttff">TTFF</string>
    <string name="load_report">loading report,please wait...</string>
    <string name="menu_internal">Internal</string>
    <string name="menu_external">External</string>
</resources>